fixed animation.css so only body text is aligned center, added container ID

--- a/public/styles/animations.css
+++ b/public/styles/animations.css
@@ -42,9 +42,10 @@
 
 body {
   background-color: white;
+}
+#container {
   text-align: center;
 }
-
 
 p {
   text-align: center;
