--- a/public/styles/sin_proj.css
+++ b/public/styles/sin_proj.css
@@ -16,8 +16,6 @@ a.header{
 	color: yellow;
 	text-decoration: none;
 	font-weight: bold;
-
-	
 }
 a.header:hover{
 	color:yellow;
@@ -37,21 +35,17 @@ h1 {
 	padding: 5px;
 	color: yellow;
 }
-
 #head {
 	background-color: #000000;
 	height: 100px;
 	margin: 0px auto;
-	
 }
-
 iframe {
 	margin: 10px;
 }
 nav {
 	padding-left:10px;
 }
-
 #form {
 	padding-left: 10px;
 	background-color: #b2b2b2;
@@ -60,15 +54,9 @@ nav {
 	border-color:;
 	border: solid #666666 2px;
 	margin: 10px auto;
+	margin-top: 200px;
 	border-radius: 7px;
-
 }
-=======
-}
-
-=======
 .song {
   display: none;
 }
->>>>>>> e78f1ee... Updated files
->>>>>>> d1826f99ab67cdf2fa12d71fd792bd7520d12a2b
